# homebase

./: .gitignore  Cargo.toml  DELETE_RANGE_DESIGN.md  DESIGN.md  LAUNCH_CHECKLIST.md  MULTILITE_CHALLENGES.md  MULTILITE_V1.md  README.md  TODO.md  admission_rollback_v2.plan.md  physics.md
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: cipher.rs  client.rs  coordination.rs  engine.rs  lease.rs  lib.rs  meta.rs  replica.rs  server.rs  session.rs  space.rs
client/tests/: attach.rs  client.rs  client_torture.rs  engine.rs  engine_encrypted.rs  equivalence.rs  fault_meta.rs  replica.rs  server_handle.rs  session.rs  space.rs
core/: Cargo.toml
core/src/: clock.rs  key.rs  lease.rs  lib.rs  messages.rs  range.rs  reader.rs  seal.rs  space.rs  storage.rs  tag.rs  writer.rs
core/tests/: key_props.rs
homebased/: Cargo.toml
homebased/src/: main.rs
homestead-client/: Cargo.toml
homestead-client/src/: lib.rs
homestead-core/: Cargo.toml
homestead-core/src/: clock.rs  key.rs  lease.rs  lib.rs  messages.rs  space.rs  tag.rs
homestead-core/tests/: key_props.rs
homestead-server/: Cargo.toml
homestead-server/src/: actor.rs  error.rs  lib.rs  schema.rs  storage.rs
homestead-server/src/space/: data.rs  lease.rs  mod.rs
homestead-server/src/storage/: slate.rs
homestead-server/tests/: lease_props.rs  space_props.rs
homestead-sim/: Cargo.toml
homestead-sim/src/: check.rs  crash.rs  exec.rs  fault_object_store.rs  fault_slate.rs  lib.rs  seeds.rs  slate_shard.rs  store.rs  torture.rs
homestead-sim/tests/: crash_torture.rs  persist_crash_torture.rs  replica_torture.rs  scenarios.rs  slate_torture.rs  steal_torture.rs
multilite/: Cargo.toml  README.md
multilite-conformance/: Cargo.toml  README.md
multilite-conformance/scripts/: fetch-sql-logic-test.sh
multilite-conformance/src/: drivers.rs  lib.rs  main.rs  report.rs  run.rs
multilite-conformance/tests/: smoke.rs
multilite-conformance/tests/slt/: basic.slt
multilite/src/: connection.rs  database.rs  error.rs  lib.rs  metastore.rs  runtime.rs  value.rs
multilite/src/database/: actor.rs  catalog.rs  codes.rs  connection.rs  isolation.rs  operation.rs  pending.rs  policy.rs  rebase.rs  row.rs  schema.rs  sql.rs  store.rs  transaction.rs  update.rs  view.rs  vtab.rs
multilite/src/v1/: connection.rs  hooks.rs  item.rs  mod.rs  schema.rs
multilite/tests/: bootstrap.rs  connection.rs  convergence.rs  isolation.rs  sql_surface.rs
multilite/tests/common/: mod.rs
npm/: LICENSE  README.md  package.json
python/: README.md  pyproject.toml
python/multilite/: __init__.py
server/: Cargo.toml
server/src/: actor.rs  error.rs  lib.rs  main.rs  reference.rs  schema.rs  storage.rs
server/src/space/: data.rs  lease.rs  mod.rs
server/src/space/tests/: randomized.rs
server/src/storage/: slate.rs
server/tests/: lease_props.rs  space_props.rs
sim/: Cargo.toml
sim/src/: check.rs  crash.rs  exec.rs  fault_object_store.rs  fault_slate.rs  lib.rs  seeds.rs  slate_shard.rs  store.rs  torture.rs
sim/tests/: crash_torture.rs  lease_contention_torture.rs  persist_crash_torture.rs  replica_torture.rs  scenarios.rs  session_torture.rs  slate_torture.rs  steal_torture.rs
src/: lib.rs
