[workspace]
resolver = "3"
members = ["core", "server", "client", "sim"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
homebase-core = { path = "core", version = "0.1.0" }
homebase-server = { path = "server", version = "0.1.0" }
rand = "0.9"
proptest = "1"
pollster = "0.4"
futures-channel = "0.3"
futures-core = "0.3"
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
