[workspace]
resolver = "3"
members = ["core", "server", "client", "sim"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nikhilgarg28/homebase"

[workspace.dependencies]
homebase-core = { path = "core", version = "0.1.1" }
# default-features off at the workspace level so light consumers (the client
# crate's tests) skip slatedb; sim/server turn it back on where needed.
homebase-server = { path = "server", version = "0.1.1", default-features = false }
homebase = { path = "client", version = "0.1.1" }
rand = "0.9"
proptest = "1"
pollster = "0.4"
futures-channel = "0.3"
futures-core = "0.3"
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
