[workspace]
resolver = "3"
members = ["core", "server", "client", "sim", "multilite", "multilite-conformance"]
default-members = ["core", "server", "client", "sim", "multilite"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nikhilgarg28/multilite"

[workspace.dependencies]
homebase-client = { path = "client", version = "0.1.1" }
homebase-core = { path = "core", version = "0.1.1" }
# default-features off at the workspace level so light consumers (the client
# crate's tests) skip slatedb; sim/server turn it back on where needed.
homebase = { path = "server", version = "0.1.1", default-features = false }
homebase-sim = { path = "sim", version = "0.1.1", default-features = false }
rand = "0.9"
proptest = "1"
pollster = "0.4"
parking_lot = "0.12"
futures-channel = "0.3"
futures-core = "0.3"
futures = "0.3"
fallible-iterator = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
sha2 = "0.11.0"
sqlite3-parser = "0.16.0"
sqllogictest = "0.29.1"
