[package]
name = "homebase"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "homebase kernel client SDK"

[dependencies]
homebase-core.workspace = true

[dev-dependencies]
homebase-server = { workspace = true, default-features = false }
pollster.workspace = true
