[package]
name = "homebase"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "homebase kernel client SDK"

[dependencies]
chacha20poly1305 = { version = "0.11.0", default-features = false, features = ["alloc"] }
getrandom = "0.4.3"
hkdf = "0.13.0"
hmac = "0.13.0"
homebase-core.workspace = true
futures-channel.workspace = true
sha2 = "0.11.0"

[dev-dependencies]
homebase-server = { workspace = true, default-features = false }
homebase-sim = { workspace = true, default-features = false }
pollster.workspace = true
rand.workspace = true
