[package]
name = "multilite"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-writer SQLite with E2EE sync, built on homebase - not yet ready for use"
readme = "README.md"

[dependencies]
getrandom = "0.3"
fallible-iterator.workspace = true
homebase-client.workspace = true
homebase-core.workspace = true
parking_lot.workspace = true
pollster.workspace = true
rusqlite = { version = "0.39.0", default-features = false, features = ["bundled", "preupdate_hook"] }
sha2.workspace = true
sqlite3-parser.workspace = true
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
